--- a/docs/docs/integrations/text_embedding/azureopenai.ipynb
+++ b/docs/docs/integrations/text_embedding/azureopenai.ipynb
@@ -118,7 +118,7 @@
     "embeddings = AzureOpenAIEmbeddings(\n",
     "    model=\"text-embedding-3-large\",\n",
     "    # dimensions: Optional[int] = None, # Can specify dimensions with new text-embedding-3 models\n",
-    "    # azure_endpoint=... If not provided, will read env variable AZURE_OPENAI_ENDPOINT\n",
+    "    # azure_endpoint=\"https://<your-endpoint>.openai.azure.com/\", If not provided, will read env variable AZURE_OPENAI_ENDPOINT\n",
     "    # api_key=... # Can provide an API key directly. If missing read env variable AZURE_OPENAI_API_KEY\n",
     "    # openai_api_version=..., # If not provided, will read env variable AZURE_OPENAI_API_VERSION\n",
     ")"
