--- a/docs/docs/integrations/retrievers/arxiv.ipynb
+++ b/docs/docs/integrations/retrievers/arxiv.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Source | Package |\n",
-    "| :--- | :--- | :---: |\n",
-    "[ArxivRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.arxiv.ArxivRetriever.html) | Scholarly articles on [arxiv.org](https://arxiv.org/) | langchain_community |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"external_retrievers\" item=\"ArxivRetriever\" />\n",
     "\n",
     "## Setup\n",
     "\n",
