--- a/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
+++ b/docs/docs/integrations/retrievers/google_vertex_ai_search.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
@@ -29,9 +29,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Self-host | Cloud offering | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[VertexAISearchRetriever](https://api.python.langchain.com/en/latest/vertex_ai_search/langchain_google_community.vertex_ai_search.VertexAISearchRetriever.html) | ❌ | ✅ | langchain_google_community |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"document_retrievers\" item=\"VertexAISearchRetriever\" />\n",
     "\n",
     "\n",
     "## Setup\n",
