--- a/docs/docs/integrations/retrievers/milvus_hybrid_search.ipynb
+++ b/docs/docs/integrations/retrievers/milvus_hybrid_search.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
@@ -25,11 +25,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Self-host | Cloud offering | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[MilvusCollectionHybridSearchRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_milvus.retrievers.milvus_hybrid_search.MilvusCollectionHybridSearchRetriever.html) | ✅ | ❌ | langchain_milvus |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
     "\n",
-    "\n",
+    "<ItemTable category=\"document_retrievers\" item=\"MilvusCollectionHybridSearchRetriever\" />\n",
     "\n",
     "## Setup\n",
     "\n",
