--- a/docs/docs/integrations/retrievers/tavily.ipynb
+++ b/docs/docs/integrations/retrievers/tavily.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
@@ -22,9 +22,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Source | Package |\n",
-    "| :--- | :--- | :---: |\n",
-    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | Internet search | langchain_community |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"external_retrievers\" item=\"TavilySearchAPIRetriever\" />\n",
     "\n",
     "## Setup"
    ]
