--- a/docs/docs/integrations/retrievers/azure_ai_search.ipynb
+++ b/docs/docs/integrations/retrievers/azure_ai_search.ipynb
@@ -28,9 +28,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Self-host | Cloud offering | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[AzureAISearchRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.azure_ai_search.AzureAISearchRetriever.html) | ❌ | ✅ | langchain_community |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"document_retrievers\" item=\"AzureAISearchRetriever\" />\n",
     "\n",
     "\n",
     "## Setup\n",
