--- a/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
+++ b/docs/docs/integrations/retrievers/elasticsearch_retriever.ipynb
@@ -26,9 +26,9 @@
     "\n",
     "### Integration details\n",
     "\n",
-    "| Retriever | Self-host | Cloud offering | Package |\n",
-    "| :--- | :--- | :---: | :---: |\n",
-    "[ElasticsearchRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_elasticsearch.retrievers.ElasticsearchRetriever.html) | ✅ | ✅ | langchain_elasticsearch |\n",
+    "import {ItemTable} from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"document_retrievers\" item=\"ElasticsearchRetriever\" />\n",
     "\n",
     "\n",
     "## Setup\n",
