--- a/docs/docs/integrations/retrievers/index.mdx
+++ b/docs/docs/integrations/retrievers/index.mdx
@@ -3,7 +3,7 @@ sidebar_position: 0
 sidebar_class_name: hidden
 ---
 
-import {CategoryTable} from '@theme/FeatureTables'
+import {CategoryTable, IndexTable} from '@theme/FeatureTables'
 
 # Retrievers
 
@@ -31,3 +31,7 @@ The below retrievers allow you to index and search a custom corpus of documents.
 The below retrievers will search over an external index (e.g., constructed from Internet data or similar).
 
 <CategoryTable category="external_retrievers" />
+
+## All retrievers
+
+<IndexTable />
