--- a/docs/docs/integrations/document_loaders/index.mdx
+++ b/docs/docs/integrations/document_loaders/index.mdx
@@ -3,13 +3,12 @@ sidebar_position: 0
 sidebar_class_name: hidden
 ---
 
-# Vectorstores
+# Document loaders
 
 import { CategoryTable, IndexTable } from "@theme/FeatureTables";
 
-<CategoryTable category="vectorstores" />
+<CategoryTable category="document_loaders" />
 
-## All Vectorstores
+## All document loaders
 
 <IndexTable />
-
