--- a/docs/docs/integrations/text_embedding/fireworks.ipynb
+++ b/docs/docs/integrations/text_embedding/fireworks.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"fireworks\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"Fireworks\" />\n",
     "\n",
     "## Setup\n",
     "\n",
