--- a/docs/docs/integrations/text_embedding/openai.ipynb
+++ b/docs/docs/integrations/text_embedding/openai.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"openai\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"OpenAI\" />\n",
     "\n",
     "## Setup\n",
     "\n",
