--- a/docs/docs/integrations/text_embedding/ollama.ipynb
+++ b/docs/docs/integrations/text_embedding/ollama.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"ollama\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"Ollama\" />\n",
     "\n",
     "## Setup\n",
     "\n",
