--- a/docs/docs/integrations/text_embedding/ai21.ipynb
+++ b/docs/docs/integrations/text_embedding/ai21.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"ai21\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"AI21\" />\n",
     "\n",
     "## Setup\n",
     "\n",
