--- a/docs/docs/integrations/text_embedding/azureopenai.ipynb
+++ b/docs/docs/integrations/text_embedding/azureopenai.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"azureopenai\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"AzureOpenAI\" />\n",
     "\n",
     "## Setup\n",
     "\n",
