--- a/docs/docs/integrations/text_embedding/cohere.ipynb
+++ b/docs/docs/integrations/text_embedding/cohere.ipynb
@@ -2143,7 +2143,7 @@
     }
    ],
    "source": [
-    "embeddings.embed_documents(['h', 'b'])"
+    "embeddings.embed_documents([\"h\", \"b\"])"
    ]
   },
   {
@@ -2228,7 +2228,7 @@
    ],
    "source": [
     "single_vector = embeddings.embed_query(text)\n",
-    "print(str(single_vector)[:100]) # Show the first 100 characters of the vector"
+    "print(str(single_vector)[:100])  # Show the first 100 characters of the vector"
    ]
   },
   {
@@ -2262,7 +2262,7 @@
     ")\n",
     "two_vectors = embeddings.embed_documents([text, text2])\n",
     "for vector in two_vectors:\n",
-    "    print(str(vector)[:100]) # Show the first 100 characters of the vector"
+    "    print(str(vector)[:100])  # Show the first 100 characters of the vector"
    ]
   },
   {
