--- a/docs/docs/integrations/document_loaders/index.mdx
+++ b/docs/docs/integrations/document_loaders/index.mdx
@@ -21,6 +21,12 @@ loader = CSVLoader(
 data = loader.load()
 ```
 
+## Common File Types
+
+The below document loaders allow you to load data from common data formats.
+
+<CategoryTable category="common_loaders" />
+
 ## PDFs
 
 The below document loaders allow you to load documents.
@@ -31,7 +37,7 @@ The below document loaders allow you to load documents.
 
 The below document loaders allow you to load webpages.
 
-<CategoryTable category="web" />
+<CategoryTable category="web_loaders" />
 
 
 ## All document loaders
