--- a/docs/docs/integrations/document_loaders/index.mdx
+++ b/docs/docs/integrations/document_loaders/index.mdx
@@ -37,7 +37,7 @@ The below document loaders allow you to load documents.
 
 The below document loaders allow you to load webpages.
 
-<CategoryTable category="web_loaders" />
+<CategoryTable category="webpage_loaders" />
 
 
 ## All document loaders
