--- a/docs/docs/integrations/chat/octoai.ipynb
+++ b/docs/docs/integrations/chat/octoai.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Octo AI\n",
+    "# ChatOctoAI\n",
     "\n",
     "[OctoAI](https://docs.octoai.cloud/docs) offers easy access to efficient compute and enables users to integrate their choice of AI models into applications. The `OctoAI` compute service helps you run, tune, and scale AI applications easily.\n",
     "\n",
