--- a/docs/docs/integrations/chat/perplexity.ipynb
+++ b/docs/docs/integrations/chat/perplexity.ipynb
@@ -15,7 +15,7 @@
    "id": "bf733a38-db84-4363-89e2-de6735c37230",
    "metadata": {},
    "source": [
-    "# Perplexity\n",
+    "# ChatPerplexity\n",
     "\n",
     "This notebook covers how to get started with `Perplexity` chat models."
    ]
