add iterative refinement how-to guide

--- a/docs/docs/how_to/summarize_map_reduce.ipynb
+++ b/docs/docs/how_to/summarize_map_reduce.ipynb
@@ -177,7 +177,19 @@
     "\n",
     "Below we implement a simple application that maps the summarization step on a list of documents, then reduces them using the above prompts.\n",
     "\n",
-    "Map-reduce flows are particularly useful when texts are long compared to the context window of a LLM. For long texts, we need a mechanism that ensures that the context to be summarized in the reduce step does not exceed a model's context window size. Here we implement a recursive \"collapsing\" of the summaries: the inputs are partitioned based on a token limit, and summaries are generated of the partitions. This step is repeated until the total length of the summaries is within a desired limit, allowing for the summarization of arbitrary-length text."
+    "Map-reduce flows are particularly useful when texts are long compared to the context window of a LLM. For long texts, we need a mechanism that ensures that the context to be summarized in the reduce step does not exceed a model's context window size. Here we implement a recursive \"collapsing\" of the summaries: the inputs are partitioned based on a token limit, and summaries are generated of the partitions. This step is repeated until the total length of the summaries is within a desired limit, allowing for the summarization of arbitrary-length text.\n",
+    "\n",
+    "We will need to install `langgraph`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dc8cf11-c0e5-4448-a921-9377acad1df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -qU langgraph"
    ]
   },
   {
