add callout for legacy chains

--- a/docs/docs/tutorials/summarization.ipynb
+++ b/docs/docs/tutorials/summarization.ipynb
@@ -18,6 +18,14 @@
    "source": [
     "# Summarize Text\n",
     "\n",
+    ":::{.callout-info}\n",
+    "\n",
+    "This tutorial demonstrates text summarization using built-in chains and [LangGraph](https://langchain-ai.github.io/langgraph/).\n",
+    "\n",
+    "This page previously showcased the legacy chains [StuffDocumentsChain](/docs/versions/migrating_chains/stuff_docs_chain/), [MapReduceDocumentsChain](/docs/versions/migrating_chains/map_reduce_chain/), and [RefineDocumentsChain](https://python.langchain.com/v0.2/docs/versions/migrating_chains/refine_docs_chain/). See [this page](/docs/versions/migrating_chains/) for information on using those abstractions and a comparison with the methods demonstrated here.\n",
+    "\n",
+    ":::\n",
+    "\n",
     "Suppose you have a set of documents (PDFs, Notion pages, customer questions, etc.) and you want to summarize the content. \n",
     "\n",
     "LLMs are a great tool for this given their proficiency in understanding and synthesizing text.\n",
