--- a/docs/docs/integrations/document_loaders/mathpix.ipynb
+++ b/docs/docs/integrations/document_loaders/mathpix.ipynb
@@ -21,11 +21,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import getpass\n",
+    "import os\n",
     "\n",
-    "if 'MATHPIX_API_KEY' not in os.environ:\n",
-    "    os.environ['MATHPIX_API_KEY'] = getpass.getpass('Enter your Mathpix API key: ')"
+    "if \"MATHPIX_API_KEY\" not in os.environ:\n",
+    "    os.environ[\"MATHPIX_API_KEY\"] = getpass.getpass(\"Enter your Mathpix API key: \")"
    ]
   },
   {
@@ -80,9 +80,7 @@
    "source": [
     "from langchain_community.document_loaders import MathpixPDFLoader\n",
     "\n",
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = MathpixPDFLoader(file_path)"
    ]
   },
