--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -65,9 +65,7 @@
    "source": [
     "from langchain_community.document_loaders import PDFMinerLoader\n",
     "\n",
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PDFMinerLoader(file_path)"
    ]
   },
@@ -166,9 +164,7 @@
    "source": [
     "from langchain_community.document_loaders import PDFMinerPDFasHTMLLoader\n",
     "\n",
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PDFMinerPDFasHTMLLoader(file_path)\n",
     "docs = loader.load()\n",
     "docs[0]"
