--- a/docs/docs/integrations/document_loaders/pymupdf.ipynb
+++ b/docs/docs/integrations/document_loaders/pymupdf.ipynb
@@ -67,9 +67,7 @@
    "source": [
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
     "\n",
-    "loader = PyMuPDFLoader(\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")"
+    "loader = PyMuPDFLoader(\"./example_data/layout-parser-paper.pdf\")"
    ]
   },
   {
