--- a/docs/docs/integrations/document_loaders/pypdfium2.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfium2.ipynb
@@ -82,9 +82,7 @@
    "source": [
     "from langchain_community.document_loaders import PyPDFium2Loader\n",
     "\n",
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PyPDFium2Loader(file_path)"
    ]
   },
