--- a/docs/docs/integrations/document_loaders/unstructured_pdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_pdfloader.ipynb
@@ -69,9 +69,7 @@
    "source": [
     "from langchain_community.document_loaders import UnstructuredPDFLoader\n",
     "\n",
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = UnstructuredPDFLoader(file_path)"
    ]
   },
@@ -146,9 +144,7 @@
     }
    ],
    "source": [
-    "file_path = (\n",
-    "    \"./example_data/layout-parser-paper.pdf\"\n",
-    ")\n",
+    "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = UnstructuredPDFLoader(file_path, mode=\"elements\")\n",
     "\n",
     "data = loader.load()\n",
