--- a/docs/docs/integrations/document_loaders/mathpix.ipynb
+++ b/docs/docs/integrations/document_loaders/mathpix.ipynb
@@ -88,9 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load\n",
-    "\n",
-    "- TODO: Run cells to show loading capabilities"
+    "## Load"
    ]
   },
   {
@@ -116,9 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lazy Load\n",
-    "\n",
-    "- TODO: Run cells to show lazy loading capabilities. Delete if lazy loading is not implemented."
+    "## Lazy Load"
    ]
   },
   {
