--- a/docs/docs/integrations/document_loaders/mathpix.ipynb
+++ b/docs/docs/integrations/document_loaders/mathpix.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# MathPix\n",
     "\n",
+    "## Overview\n",
+    "\n",
     "Inspired by Daniel Gross's snippet here: [https://gist.github.com/danielgross/3ab4104e14faccc12b49200843adab21](https://gist.github.com/danielgross/3ab4104e14faccc12b49200843adab21)\n",
     "\n",
     "## Setup\n",
