--- a/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
@@ -8,6 +8,18 @@
     "\n",
     "This loader loads all PDF files from a specific directory.\n",
     "\n",
+    "## Overview\n",
+    "### Integration details\n",
+    "\n",
+    "\n",
+    "| Class | Package | Local | Serializable | JS support|\n",
+    "| :--- | :--- | :---: | :---: |  :---: |\n",
+    "| [PyPDFDirectoryLoader](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.pdf.PyPDFDirectoryLoader.html) | [langchain_community](https://api.python.langchain.com/en/latest/community_api_reference.html) | ✅ | ❌ | ❌ | \n",
+    "### Loader features\n",
+    "| Source | Document Lazy Loading | Native Async Support\n",
+    "| :---: | :---: | :---: | \n",
+    "| PyPDFDirectoryLoader | ✅ | ❌ | \n",
+    "\n",
     "## Setup\n",
     "\n",
     "### Credentials\n",
