--- a/docs/docs/integrations/document_loaders/pdfplumber.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfplumber.ipynb
@@ -130,9 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lazy Load\n",
-    "\n",
-    "- TODO: Run cells to show lazy loading capabilities. Delete if lazy loading is not implemented."
+    "## Lazy Load"
    ]
   },
   {
