--- a/docs/docs/integrations/providers/box.mdx
+++ b/docs/docs/integrations/providers/box.mdx
@@ -59,11 +59,12 @@ We will cover passing it directly to the loader in the section below.
 * CCG with a service account
 * CCG with a specified user
 
-> [!NOTE]
-> If using JWT authentication, you will need to download the configuration from the Box
-> developer console after generating your public/private key pair. Place this file in your 
-> application directory structure somewhere. You will use the path to this file when using
-> the `BoxAuth` helper class.
+:::note
+If using JWT authentication, you will need to download the configuration from the Box
+developer console after generating your public/private key pair. Place this file in your 
+application directory structure somewhere. You will use the path to this file when using
+the `BoxAuth` helper class.
+:::
 
 For more information, learn about how to 
 [set up a Box application](https://developer.box.com/guides/getting-started/first-application/),
