--- a/docs/docs/integrations/document_loaders/box.ipynb
+++ b/docs/docs/integrations/document_loaders/box.ipynb
@@ -15,28 +15,20 @@
    "source": [
     "# BoxLoader\n",
     "\n",
-    "- TODO: Make sure API reference link is correct.\n",
-    "\n",
     "This notebook provides a quick overview for getting started with Box [document loader](/docs/integrations/document_loaders/). For detailed documentation of all BoxLoader features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.langchain_box_loader.BoxLoader.html).\n",
     "\n",
-    "- TODO: Add any other relevant links, like information about underlying API, etc.\n",
     "\n",
     "## Overview\n",
     "\n",
     "The `BoxLoader` class helps you get your unstructured content from Box in Langchain's `Document` format. You can do this with either a `List[str]` containing Box file IDs, or with a `str` containing a Box folder ID. \n",
     "\n",
-    "You can provide a `Bool` that tells the loader whether to try to fetch a text representation of the file, and for these text representations, you can specify a character limit to limit how much text is returned. **We highly recommend using text representations whenever possible. There is an additional `Bool` to decide to fetch images or ignore them. `BoxLoader` ignores any file that isn't in our list of supported document or image types.\n",
+    "You must provide either a `List[str]` containing Box file Ids, or a `str` containing a folder ID. If getting files from a folder with folder ID, you can also set a `Bool` to tell the loader to get all sub-folders in that folder, as well. \n",
     "\n",
-    "If getting files from a folder with folder ID, you can also set a `Bool` to tell the loader to get all sub-folders in that folder, as well. \n",
+    ":::info\n",
+    "A Box instance can contain Petabytes of files, and folders can contain millions of files. Be intentional when choosing what folders you choose to index. And we recommend never getting all files from folder 0 recursively. Folder ID 0 is your root folder.\n",
+    ":::\n",
     "\n",
-    "> [!WARNING]\n",
-    "> A Box instance can contain Petabytes of files, and folders can contain millions of files. Be intentional when choosing what folders you choose to index. And we recommend never getting all files from folder 0 recursively. Folder ID 0 is your root folder.\n",
-    "\n",
-    "For files without a text representation, we rely on Unstructured's community loaders. These are part of the package and all dependencies will be loaded for you. \n",
-    "\n",
-    "> [!IMPORTANT]\n",
-    "> If you plan to include images, you will need Tesseract installed on the system running the application and you will need the path to tesseract's `bin` directory in the shell's `PATH` environment variable: `PATH=$PATH;/opt/homebrew/Cellar/tesseract/5.4.1/bin`\n",
-    "> For more information on Tesseract, visit their [website](https://tesseract-ocr.github.io/tessdoc/Installation.html).\n",
+    "Files without a text representation will be skipped.\n",
     "\n",
     "### Integration details\n",
     "\n",
@@ -54,7 +46,7 @@
     "\n",
     "In order to use the Box package, you will need a few things:\n",
     "\n",
-    "* A Box account — For the Box AI connector, this must be an Enterprise Plus system. For the other tools, you can use a [free developer account](https://account.box.com/signup/n/developer#ty9l3).\n",
+    "* A Box account — If you are not a current Box customer or want to test outside of your production Box instance, you can use a [free developer account](https://account.box.com/signup/n/developer#ty9l3).\n",
     "* [A Box app](https://developer.box.com/guides/getting-started/first-application/) — This is configured in the [developer console](https://account.box.com/developers/console), and for Box AI, must have the `Manage AI` scope enabled. Here you will also select your authentication method\n",
     "* The app must be [enabled by the administrator](https://developer.box.com/guides/authorization/custom-app-approval/#manual-approval). For free developer accounts, this is whomever signed up for the account.\n",
     "\n",
@@ -69,7 +61,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your Box Developer Token:  ········\n"
@@ -115,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -qU langchain_community"
+    "%pip install -qU langchain_box"
    ]
   },
   {
@@ -135,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +139,6 @@
     "    box_developer_token=box_developer_token,\n",
     "    box_file_ids=box_file_ids,\n",
     "    character_limit=10000,  # Optional. Defaults to no limit\n",
-    "    get_text_rep=True,  # Get text rep first when available, default True\n",
-    "    get_images=False,  # Download images, defaults to False\n",
     ")"
    ]
   },
@@ -179,8 +169,6 @@
     "    box_folder_id=box_folder_id,\n",
     "    recursive=False,  # Optional. return entire tree, defaults to False\n",
     "    character_limit=10000,  # Optional. Defaults to no limit\n",
-    "    get_text_rep=True,  # Get text rep first when available, default True\n",
-    "    get_images=False,  # Download images, defaults to False\n",
     ")"
    ]
   },
@@ -197,15 +185,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m docs \u001b[38;5;241m=\u001b[39m \u001b[43mloader\u001b[49m\u001b[38;5;241m.\u001b[39mload()\n\u001b[1;32m      2\u001b[0m docs[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'loader' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Document(metadata={'source': 'https://dl.boxcloud.com/api/2.0/internal_files/1514555423624/versions/1663171610024/representations/extracted_text/content/', 'title': 'Invoice-A5555_txt'}, page_content='Vendor: AstroTech Solutions\\nInvoice Number: A5555\\n\\nLine Items:\\n    - Gravitational Wave Detector Kit: $800\\n    - Exoplanet Terrarium: $120\\nTotal: $920')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'source': 'https://dl.boxcloud.com/api/2.0/internal_files/1514555423624/versions/1663171610024/representations/extracted_text/content/', 'title': 'Invoice-A5555_txt'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(docs[0].metadata)"
    ]
