update loader docs

--- a/docs/docs/integrations/document_loaders/box.ipynb
+++ b/docs/docs/integrations/document_loaders/box.ipynb
@@ -42,8 +42,6 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Box setup\n",
-    "\n",
     "In order to use the Box package, you will need a few things:\n",
     "\n",
     "* A Box account — If you are not a current Box customer or want to test outside of your production Box instance, you can use a [free developer account](https://account.box.com/signup/n/developer#ty9l3).\n",
@@ -114,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
     "### Load files\n",
     "\n",
